2017-06-14  Bruno Haible  <bruno@clisp.org>

	Don't declare the need for an executable stack on Linux and FreeBSD.
	For explanations, see
	<https://git.savannah.gnu.org/gitweb/?p=libffcall.git;a=blob_plain;f=porting-tools/execstack/README>.
	* ari80386.d, sp80386.d: Add GNU-stack note.
	* arisparc.d, arisparc64.d, spsparc.d, spsparc64.d: Likewise.
	* arihppa.d: Likewise.
	* arivaxunix.d: Likewise.
	* sp68000.d: Likewise.
	* ariarm.d: Likewise, but with slightly different syntax.

2017-06-11  Bruno Haible  <bruno@clisp.org>

	Update Swedish translation.
	* po/sv.po: Update from Sebastian Rasmussen <sebras@gmail.com>.
	* po/sv.gmo, po/clisplow_sv.*: Regenerated.

2017-06-02  Bruno Haible  <bruno@clisp.org>

	Rename frame type CHANDLER to C_HANDLER.
	Suggested by Sam Steingold.
	* lispbibl.d (C_HANDLER_frame_info): Renamed from CHANDLER_frame_info.
	(make_C_HANDLER_frame): Renamed from make_CHANDLER_frame.
	(make_C_HANDLER_entry_frame): Renamed from make_CHANDLER_entry_frame.
	(unwind_C_HANDLER_frame): Renamed from unwind_CHANDLER_frame.
	* eval.d (invoke_handlers): Update.
	* io.d (read_internal): Likewise.
	* pathname.d (LOGICAL-PATHNAME, direntry_to_string): Likewise.
	* stream.d (MAYBE_IGNORE_ERRORS,lisp_completion) : Likewise.
	* spvw_update.d (update_STACKs): Likewise.
	* spvw_garcol.d, spvw_garcol_old.d (gc_mark_stack): Likewise.

2017-05-30  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (per_thread) [UNIX_MACOSX]: use __thread with clang

2017-05-30  Bruno Haible  <bruno@clisp.org>

	Don't publish impnotes.html for the moment.
	* doc/Makefile (DIST): Set to empty.

2017-05-29  Bruno Haible  <bruno@clisp.org>

	Fix GC bug that affects some stream types (regression from 2004-04-28).
	Analyzed by Vladimir Tzankov <vtzankov@gmail.com>.
	The problem is that since the macro SXrecord_nonweak_length was
	introduced, walking a page of Xrecord objects makes use of the
	Record_type(obj) without testing whether typecode(obj)==stream_type.